# quantrs

./: .gitignore  API_FINALIZATION_PLAN.md  API_USAGE_EXAMPLES.md  CHANGELOG.md  CIRCUIT_OPTIMIZATION_IMPLEMENTATION.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_EXAMPLES.md  COMPREHENSIVE_TUTORIAL.md  CONTRIBUTING.md  Cargo.toml  ENHANCEMENTS.md  IMMEDIATE_NEXT_STEPS.md  KAK_MULTIQUBIT_IMPLEMENTATION.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  MACOS_BUILD.md  MBQC_IMPLEMENTATION.md  MIGRATION_GUIDE_ALPHA_TO_BETA.md  NOTICE  OPTIMIZATION_GUIDE.md  OVERALL_IMPLEMENTATION_SUMMARY.md  PYTHON_BINDINGS_IMPLEMENTATION.md  PYTHON_RELEASE.md  QUANTUM_MACHINE_LEARNING_IMPLEMENTATION.md  README.md  RELEASE_NOTES.md  SCIRS2_INTEGRATION.md  SCIRS2_INTEGRATION_POLICY.md  SECURITY.md  SHANNON_DECOMPOSITION_IMPLEMENTATION.md  TODO.md  ZX_CALCULUS_IMPLEMENTATION.md  clippy.toml  module_readme_template.md  module_todo_template.md  publish_crates.sh
anneal/: Cargo.toml  README.md  TODO.md  build.rs  symbolic_features_demo.md  symbolic_success_demo  symbolic_success_demo.rs  test_symbolic_integration  test_symbolic_integration.rs
anneal/benches/: basic_benchmarks.rs
anneal/examples/: advanced_embedding.rs  aws_braket_client_example.rs  coherent_ising_machine_example.rs  comprehensive_framework_demo.rs  continuous_variable_example.rs  csp_compiler_example.rs  dsl_example.rs  dwave_leap_client_example.rs  energy_landscape_visualization.rs  flux_bias_optimization.rs  fujitsu_example.rs  ising_ground_state.rs  max_cut_annealing.rs  multi_objective_example.rs  non_stoquastic_example.rs  photonic_annealing_example.rs  population_annealing_example.rs  problem_specific_schedules.rs  qaoa_circuit_bridge_example.rs  qaoa_example.rs  quantum_boltzmann_machine_example.rs  quantum_error_correction_example.rs  quantum_machine_learning_example.rs  quantum_walk_example.rs  qubo_decomposition_example.rs  reverse_annealing_demo.rs  simple_penalty_optimization.rs  variational_quantum_annealing_example.rs
anneal/src/: active_learning_decomposition.rs  adaptive_constraint_handling.rs  adaptive_schedules.rs  advanced_meta_optimizer.rs  advanced_testing_framework.rs  braket.rs  chain_break.rs  climate_modeling_optimization.rs  coherent_ising_machine.rs  comprehensive_integration_testing.rs  compression.rs  continuous_variable.rs  csp_compiler.rs  dsl.rs  dwave.rs  dynamic_topology_reconfiguration.rs  embedding.rs  enterprise_monitoring.rs  flux_bias.rs  fujitsu.rs  hardware_compilation.rs  heterogeneous_hybrid_engine.rs  hobo.rs  hybrid_solvers.rs  ising.rs  layout_embedding.rs  lib.rs  meta_learning_optimization.rs  multi_chip_embedding.rs  multi_objective.rs  neural_annealing_schedules.rs  non_stoquastic.rs  partitioning.rs  penalty_optimization.rs  photonic_annealing.rs  population_annealing.rs  problem_schedules.rs  qaoa.rs  qaoa_anneal_bridge.rs  qaoa_circuit_bridge.rs  (+16 more)
circuit/: Cargo.toml  README.md  TODO.md  clippy.B  clippy.C
circuit/benches/: circuit_benchmarks.rs
circuit/examples/: automatic_parallelization_demo.rs  classical_control_demo.rs  compile_and_route.rs  crosstalk_demo.rs  distributed_demo.rs  equivalence_demo.rs  noise_optimization_demo.rs  optimization_demo.rs  pulse_demo.rs  qasm_example.rs  qc_co_optimization_demo.rs  synthesis_demo.rs  tensor_network_demo.rs  vqe_demo.rs  zx_optimize.rs
circuit/src/: buffer_manager.rs  builder.rs  circuit_cache.rs  circuit_patterns.rs  classical.rs  commutation.rs  crosstalk.rs  dag.rs  debugger.rs  distributed.rs  equivalence.rs  fault_tolerant.rs  formatter.rs  gate_applier.rs  graph_optimizer.rs  lib.rs  linter.rs  measurement.rs  ml_optimization.rs  noise_models.rs  optimizer.rs  photonic.rs  profiler.rs  pulse.rs  qasm.rs  qc_co_optimization.rs  resource_estimator.rs  scirs2_benchmarking.rs  scirs2_cross_compilation_enhanced.rs  scirs2_integration.rs  scirs2_ir_tools.rs  scirs2_matrices.rs  scirs2_optimization.rs  scirs2_pulse_control_enhanced.rs  scirs2_qasm_compiler_enhanced.rs  scirs2_similarity.rs  scirs2_transpiler_enhanced.rs  simulator_interface.rs  slicing.rs  solovay_kitaev.rs  (+10 more)
circuit/tests/: optimization_tests.rs  qasm_roundtrip_tests.rs  qasm_tests.rs
core/: Cargo.toml  ENHANCEMENTS_SUMMARY.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUCCESS.md  NEXT_PHASE_ROADMAP.md  QUALITY_ASSURANCE_REPORT.md  README.md  SESSION_SUMMARY.md  TODO.md  ULTRATHINK_ACHIEVEMENTS.md  USAGE_GUIDE.md  pyproject.toml  test_python_bindings.py
core/examples/: advanced_qml_features.rs  basic_quantum_gates.rs  batch_processing.rs  bell_pair.rs  error_correction.rs  grover_search.rs  ml_rl_optimization.rs  qec_threshold.rs  quantum_cryptography.rs  quantum_machine_learning.rs  quantum_phase_estimation.rs  (+3 more)
device/: Cargo.toml  README.md  TODO.md  ULTRA_IMPLEMENTATION_SUMMARY.md
examples/: Cargo.toml  README.md  device_calibration_demo.rs  gate_translation_demo.rs  ml_hep_classification.rs  ml_quantum_gan.rs  ml_showcase.rs  specialized_gates_demo.rs  variational_optimization_demo.rs
ml/: ANOMALY_DETECTION_IMPLEMENTATION.md  AUTOML_IMPLEMENTATION_SUMMARY.md  Cargo.toml  PERFORMANCE_OPTIMIZATION_GUIDE.md  README.md  TODO.md
py/: .coverage  BETA3_RELEASE_NOTES.md  Cargo.toml  ENHANCEMENTS_SUMMARY.md  FRAMEWORK_INTEGRATION.md  MANIFEST.in  README.md  SCIRS2_COMPLIANCE.md  SESSION_SUMMARY_2025-11-18.md  TODO.md  pyproject.toml  quantrs2.rb  setup.py
quantrs2/: CHANGELOG.md  Cargo.toml  FEATURES.md  README.md  SCIRS2_INTEGRATION.md  SCIRS2_INTEGRATION_GUIDE.md  TODO.md  build.rs
quantrs2-symengine/: Cargo.toml  TODO.md
quantrs2-symengine-pure/: Cargo.toml  README.md
quantrs2-symengine-sys/: Cargo.toml  DEVELOPER_GUIDE.md  README.md  TODO.md  build.rs  wrapper.h
sim/: Cargo.toml  README.md  TODO.md  clippy_output.txt  debug_holographic_matrix.rs
tytan/: CHANGELOG.md  Cargo.toml  DEVELOPMENT_TOOLS_IMPLEMENTATION.md  FINAL_IMPLEMENTATION_SUMMARY.md  FUTURE_DIRECTIONS_IMPLEMENTATION.md  HARDWARE_INTEGRATION_GUIDE.md  PROJECT_SUMMARY.md  README.md  RELEASE_NOTES_v0.2.0.md  SCIRS_INTEGRATION.md  TODO.md  test_fix.rs
(+2321 files in other folders)
