[workspace]
resolver = "2"
members = [
    "core",
    "circuit",
    "sim",
    "anneal",
    "device",
    "ml",
    "tytan",  # Re-enabled after resolving dependency conflicts
    "py",
    "examples",
]
exclude = [
    "symengine-fork",
]

# Exclude the Python bindings when publishing to crates.io
[workspace.metadata.cargo-released]
exclude-members = ["py", "examples"]

[patch.crates-io]
symengine-sys = { git = "https://github.com/cool-japan/symengine-sys.git", branch = "fixed-macos" }
symengine = { git = "https://github.com/cool-japan/symengine-rs.git", branch = "fixed-macos" }

[workspace.lints.rust]
nonstandard_style = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }

[workspace.lints.clippy]
enum_glob_use = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_possible_wrap = "warn"
dbg_macro = "warn"

[workspace.package]
version = "0.1.0-alpha.5"
authors = ["QuantRS2 Contributors"]
edition = "2021"
rust-version = "1.86.0"
repository = "https://github.com/cool-japan/quantrs"
license = "MIT OR Apache-2.0"
keywords = ["quantum", "computing", "simulator", "annealing", "gate"]
categories = ["science", "simulation"]

[workspace.dependencies]
# Common dependencies
num-complex = "0.4.6"
ndarray = { version = "0.16.1", features = ["rayon"] }
rayon = "1.10.0"
thiserror = "2.0.12"
scirs2-core = { version = "0.1.0-alpha.4", default-features = false }
scirs2-optimize = { version = "0.1.0-alpha.4", default-features = false }
scirs2-linalg = { version = "0.1.0-alpha.4", default-features = false }

# For randomization
rand = "0.9.1"
rand_chacha = "0.9.0"

# For serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For GPU support
wgpu = { version = "25.0.2" }
bytemuck = { version = "1.23.1", features = ["derive"] }

# For D-Wave annealing and networking
reqwest = { version = "0.12.20", features = ["json"] }
tokio = { version = "1.45.1", features = ["full"] }

# For FFI and Python bindings
pyo3 = { version = "0.25.1", features = ["extension-module"] }
numpy = "0.25"

# For UUIDs
uuid = { version = "1.17.0", features = ["v4", "serde"] }

# For optional functionality
symengine = { version = "0.3.0" }
regex = "1.11.1"
wide = "0.7.32"
chrono = "0.4"
async-trait = "0.1"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
ndarray-rand = "0.15"
ndarray-stats = "0.6"
rand_distr = "0.5"
ocl = "0.19.7"
nalgebra = "0.33.2"
fastrand = "2.3.0"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
opt-level = 3
