[package]
name = "quantrs-anneal"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Quantum annealing support for the quantrs framework"

[dependencies]
quantrs-core = { path = "../core", version = "0.1.0" }
num-complex.workspace = true
thiserror.workspace = true
rand = "0.9.1"
rand_chacha = "0.9.0"

# For D-Wave integration
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
dwave = ["dep:reqwest", "dep:tokio", "dep:serde", "dep:serde_json"]