[package]
name = "quantrs2-anneal"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Quantum annealing support for the QuantRS2 framework"

[dependencies]
quantrs2-core = { path = "../core", version = "0.1.0-alpha.2" }
num-complex.workspace = true
thiserror.workspace = true
rand.workspace = true
rand_chacha.workspace = true

# For D-Wave integration
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = []
dwave = ["dep:reqwest", "dep:tokio", "dep:serde", "dep:serde_json"]