[package]
name = "quantrs-circuit"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Quantum circuit representation and DSL for the quantrs framework"

[dependencies]
quantrs-core = { path = "../core", version = "0.1.0" }
num-complex.workspace = true
thiserror.workspace = true

[dev-dependencies]
num-complex.workspace = true