[package]
name = "quantrs-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core types and traits for the quantrs quantum computing framework"

[dependencies]
num-complex.workspace = true
thiserror.workspace = true

[features]
default = []