[package]
name = "quantrs2-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core types and traits for the QuantRS2 quantum computing framework"

[dependencies]
num-complex.workspace = true
thiserror.workspace = true
ndarray.workspace = true
scirs2-core = { workspace = true, features = ["types", "memory_management", "simd", "serialization"] }

[features]
default = []
simd = ["scirs2-core/simd"]