[package]
name = "quantrs2-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core types and traits for the QuantRS2 quantum computing framework"

[dependencies]
num-complex.workspace = true
thiserror.workspace = true
ndarray.workspace = true
scirs2-core = { workspace = true, features = ["types", "memory_management", "simd", "serialization"] }
scirs2-linalg = { workspace = true }
scirs2-optimize = { workspace = true }
scirs2-sparse = { version = "0.1.0-alpha.4" }
smallvec = { version = "1.15", features = ["const_generics"] }
rustc-hash = "2.1"
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
ndarray-linalg = { version = "0.17", default-features = false, features = ["openblas-system"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
uuid = { workspace = true }
zstd = "0.13"
bincode = "1.3"
serde_json = "1.0"
num_cpus = "1.17"
flate2 = "1.1"
# Symbolic computation with SymEngine
symengine = { git = "https://github.com/cool-japan/symengine-rs.git", branch = "fixed-macos", optional = true }
symengine-sys = { git = "https://github.com/cool-japan/symengine-sys.git", branch = "fixed-macos", optional = true }
num-traits = "0.2"
pyo3 = { workspace = true, features = ["extension-module", "abi3-py38"], optional = true }
numpy = { workspace = true, optional = true }
# numrs2 = { path = "../../numrs", optional = true }  # Temporarily disabled due to platform compilation issues

[features]
default = []
simd = ["scirs2-core/simd"]
cuda = []
metal = []
vulkan = []
mps = []
compression = []
symbolic = ["dep:symengine", "dep:symengine-sys"]  # Enable symbolic computation with SymEngine
python = ["dep:pyo3", "dep:numpy"]  # Enable Python bindings with PyO3 and NumPy (NumRS2 temporarily disabled)
