[package]
name = "quantrs2-device"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Quantum device connectors for the QuantRS2 framework"

[dependencies]
quantrs2-core = { path = "../core", version = "0.1.0-alpha.2" }
quantrs2-circuit = { path = "../circuit", version = "0.1.0-alpha.2" }
num-complex.workspace = true
thiserror.workspace = true

# For device connectivity
reqwest = { version = "0.11", features = ["json"], optional = true }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
chrono = { version = "0.4", optional = true }
async-trait = { version = "0.1", optional = true }

# For AWS authentication
hmac = { version = "0.12.1", optional = true }
sha2 = { version = "0.10.6", optional = true }
hex = { version = "0.4.3", optional = true }
bytemuck = { version = "1.13.1", features = ["derive"], optional = true }

[features]
default = []
ibm = ["dep:reqwest", "dep:tokio", "dep:serde", "dep:serde_json", "dep:chrono", "dep:async-trait"]
azure = ["dep:reqwest", "dep:tokio", "dep:serde", "dep:serde_json", "dep:chrono", "dep:async-trait"]
aws = [
    "dep:reqwest", 
    "dep:tokio", 
    "dep:serde", 
    "dep:serde_json", 
    "dep:chrono", 
    "dep:async-trait",
    "dep:hmac",
    "dep:sha2",
    "dep:hex",
    "dep:bytemuck"
]
