[package]
name = "quantrs2-device"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Quantum device connectors for the QuantRS2 framework"

[dependencies]
quantrs2-core = { path = "../core", version = "0.1.0-alpha.3" }
quantrs2-circuit = { path = "../circuit", version = "0.1.0-alpha.3" }
num-complex.workspace = true
thiserror.workspace = true
petgraph = "0.6"
fastrand = "2.0"

# For device connectivity
reqwest = { workspace = true, features = ["json"], optional = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"], optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }

# For AWS authentication
hmac = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
bytemuck = { workspace = true, features = ["derive"], optional = true }

[features]
default = []
ibm = ["dep:reqwest", "dep:tokio", "dep:serde", "dep:serde_json", "dep:chrono", "dep:async-trait"]
azure = ["dep:reqwest", "dep:tokio", "dep:serde", "dep:serde_json", "dep:chrono", "dep:async-trait"]
aws = [
    "dep:reqwest", 
    "dep:tokio", 
    "dep:serde", 
    "dep:serde_json", 
    "dep:chrono", 
    "dep:async-trait",
    "dep:hmac",
    "dep:sha2",
    "dep:hex",
    "dep:bytemuck"
]
