[package]
name = "quantrs2-device"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Quantum device connectors for the QuantRS2 framework"

[dependencies]
quantrs2-core = { path = "../core", version = "0.1.0-alpha.5" }
quantrs2-circuit = { path = "../circuit", version = "0.1.0-alpha.5" }
num-complex.workspace = true
thiserror.workspace = true
petgraph = "0.6"
fastrand = "2.3"
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
ndarray.workspace = true
rayon.workspace = true
num_cpus = "1.17"

# SciRS2 dependencies for advanced algorithms
scirs2-stats = { version = "0.1.0-alpha.4", default-features = false, optional = true }
scirs2-graph = { version = "0.1.0-alpha.4", default-features = false, optional = true }
scirs2-linalg = { workspace = true, optional = true }
scirs2-optimize = { workspace = true, optional = true }

# For device connectivity
reqwest = { workspace = true, features = ["json"], optional = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "time"], optional = true }
futures = { version = "0.3", optional = true }
broadcast = "0.1"
chrono = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
uuid = { version = "1.17.0", features = ["v4"], optional = true }
url = { version = "2.5.4", features = ["serde"] }

# For AWS authentication
hmac = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
bytemuck = { workspace = true, features = ["derive"], optional = true }

# For quantum security features
aes-gcm = { version = "0.10.3", optional = true }
x25519-dalek = { version = "2.0.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["scheduling", "scirs2", "security"]
ibm = ["dep:reqwest", "dep:tokio", "dep:chrono", "dep:async-trait"]
azure = ["dep:reqwest", "dep:tokio", "dep:chrono", "dep:async-trait"]
aws = [
    "dep:reqwest", 
    "dep:tokio", 
    "dep:chrono", 
    "dep:async-trait",
    "dep:hmac",
    "dep:sha2",
    "dep:hex",
    "dep:bytemuck"
]
scheduling = ["dep:tokio", "dep:async-trait", "dep:uuid", "dep:futures"]
scirs2 = ["dep:scirs2-stats", "dep:scirs2-graph", "dep:scirs2-linalg", "dep:scirs2-optimize"]
security = ["dep:aes-gcm", "dep:x25519-dalek", "dep:sha2", "dep:chrono"]
