[package]
name = "quantrs2-ml"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["quantum", "computing", "machine-learning", "ai", "data-science"]
categories.workspace = true
description = "Quantum Machine Learning module for QuantRS2"
readme = "README.md"

[dependencies]
quantrs2-core = { path = "../core", version = "0.1.0-alpha.5" }
quantrs2-circuit = { path = "../circuit", version = "0.1.0-alpha.5" }
quantrs2-sim = { path = "../sim", version = "0.1.0-alpha.5" }
quantrs2-anneal = { path = "../anneal", version = "0.1.0-alpha.5" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
ndarray.workspace = true
ndarray-rand.workspace = true
ndarray-stats.workspace = true
rand.workspace = true
rand_distr.workspace = true
rand_chacha = "0.3"
rayon.workspace = true
num-complex.workspace = true
fastrand.workspace = true
num_cpus = "1.17"

[features]
default = []
gpu = ["quantrs2-sim/gpu"]
