[package]
name = "quantrs2-py"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Python bindings for the QuantRS2 framework"

[lib]
name = "quantrs2"
crate-type = ["cdylib"]

[dependencies]
quantrs2-core = { path = "../core", version = "0.1.0-alpha.1" }
quantrs2-circuit = { path = "../circuit", version = "0.1.0-alpha.1" }
quantrs2-sim = { path = "../sim", version = "0.1.0-alpha.1", features = [] }
pyo3.workspace = true
num-complex.workspace = true
ndarray.workspace = true

[features]
default = []
gpu = ["quantrs2-sim/gpu"]