[package]
name = "quantrs2-symengine-sys"
version.workspace = true
authors.workspace = true
license.workspace = true
description = "Low level bindings to the symengine library (fixed for macOS)"
repository.workspace = true
build = "build.rs"
links = "symengine"
edition.workspace = true
rust-version.workspace = true
categories = ["mathematics", "science", "external-ffi-bindings"]
keywords = ["symbolic", "computation", "mathematics", "symengine", "bindings"]

[dependencies]
libc.workspace = true
serde = { workspace = true, optional = true, features = ["derive"] }

[build-dependencies]
bindgen.workspace = true
cc.workspace = true
pkg-config = { workspace = true, optional = true }

[features]
default = []
static = []  # Enable static linking
system-deps = ["pkg-config"]  # Use system dependencies
serde = ["dep:serde"]  # Enable serde serialization support

[lints]
workspace = true
